# scxml-core-engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-GENERATED.md  LICENSE-THIRD-PARTY.md  README.md  build.sh  build_tsan.sh  build_wasm.sh  serve_coi.py  setup-hooks.sh
examples/traffic_light/: CMakeLists.txt  main.cpp
rsm/: CMakeLists.txt
rsm/include/: GuardUtils.h  ReadySCXMLEngine.h  SCXMLEngine.h  SCXMLTypes.h  types.h
rsm/include/actions/: CancelAction.h  IActionNode.h  RaiseAction.h  ScriptAction.h
rsm/include/backends/: DefaultBackend.h  SpdlogBackend.h
rsm/include/common/: AssignHelper.h  AssignmentExecutionHelper.h  BindingHelper.h  ClassBinding.h  ConflictResolutionHelper.h  Constants.h  DataModelHelper.h  DataModelInitHelper.h  DatamodelValidationHelper.h  DisableStdOut.h  DoneDataHelper.h  EntryExitHelper.h  EventDataHelper.h  EventMatchingHelper.h  EventMetadataHelper.h  EventTypeHelper.h  FileLoadingHelper.h  FinalizeHelper.h  ForeachHelper.h  ForeachValidator.h  GuardHelper.h  HierarchicalStateHelper.h  HistoryHelper.h  HttpResponseUtils.h  ILoggerBackend.h  InPredicateHelper.h  InvokeHelper.h  Logger.h  NamelistHelper.h  ParallelCompletionHelper.h  ParallelConfigurationHelper.h  ParallelExitEntryHelper.h  ParallelStateHelper.h  ParallelTransitionHelper.h  PlatformExecutionHelper.h  SCXMLConstants.h  SendHelper.h  SendSchedulingHelper.h  StateEntryHelper.h  SystemVariableHelper.h  (+5 more)
rsm/include/core/: InvokeProcessingAlgorithms.h  ParallelStateAdapters.h
rsm/include/events/: CppHttplibClient.h  EmscriptenFetchClient.h  EventDescriptor.h  EventDispatcherImpl.h  EventRaiserRegistry.h  EventRaiserService.h  EventSchedulerImpl.h  EventTargetFactoryImpl.h  HttpClientFactory.h  HttpEventTarget.h  IEventBridge.h  IEventRaiserRegistry.h  IEventReceiver.h  IHttpClient.h  InvokeEventTarget.h  ParentEventTarget.h  PlatformEventRaiserHelper.h
rsm/include/model/: DataModelItem.h  GuardNode.h  IDataModelItem.h  IGuardNode.h  IStateNode.h  ITransitionNode.h  IXIncludeProcessor.h  InvokeNode.h  SCXMLContext.h  StateHierarchy.h  TransitionNode.h
rsm/include/parsing/: ActionParser.h  DataModelParser.h  DoneDataParser.h  GuardParser.h  IXMLDocument.h  IXMLElement.h  IXMLParser.h  InvokeParser.h  LibXMLParser.h  ParsingCommon.h  PugiXMLParser.h  SCXMLParser.h  StateNodeParser.h  TransitionParser.h  XIncludeProcessor.h
rsm/include/runtime/: ActionExecutorImpl.h  DataContentHelpers.h  EventRaiserImpl.h  HistoryStateAutoRegistrar.h  IExecutionContext.h  ISessionObserver.h  ImmediateModeGuard.h  StateMachine.h  StateMachineContext.h  StateMachineEventRaiser.h  StateMachineFactory.h
rsm/include/scripting/: DOMBinding.h  IScriptEngine.h  JSEngine.h  JSExecutionEngineImpl.h  JSResult.h  XMLDOMWrapper.h
rsm/include/states/: ConcurrentEventBroadcaster.h  ConcurrentEventTypes.h  ConcurrentRegion.h  ConcurrentStateNode.h  ConcurrentStateTypes.h  ExternalTransitionHandler.h  IConcurrentRegion.h  IStateExitHandler.h  ParallelRegionOrchestrator.h  SCXMLParallelTypes.h  StateExitExecutor.h
rsm/include/static/: StaticExecutionEngine.h
rsm/src/: ReadySCXMLEngineImpl.cpp
rsm/src/actions/: CancelAction.cpp  ForeachAction.cpp  IfAction.cpp  LogAction.cpp  RaiseAction.cpp  ScriptAction.cpp  SendAction.cpp
rsm/src/backends/: DefaultBackend.cpp  SpdlogBackend.cpp
rsm/src/common/: DataModelInitHelper.cpp  EventDataHelper.cpp  JsonUtils.cpp  Logger.cpp  NodeFactory.cpp  PlatformExecutionHelper.cpp  TypeRegistry.cpp  UrlEncodingHelper.cpp  XmlSerializationHelper.cpp
rsm/src/events/: CppHttplibClient.cpp  EmscriptenFetchClient.cpp  EventDispatcherImpl.cpp  EventRaiserService.cpp  EventSchedulerImpl.cpp  EventTargetFactoryImpl.cpp  HttpClientFactory.cpp  HttpEventReceiver.cpp  HttpEventTarget.cpp  InternalEventTarget.cpp  InvokeEventTarget.cpp  ParentEventTarget.cpp  PlatformEventRaiserHelper.cpp
rsm/src/model/: DataModelItem.cpp  InvokeNode.cpp  SCXMLContext.cpp  SCXMLModel.cpp  StateHierarchy.cpp  StateNode.cpp  TransitionNode.cpp
rsm/src/parsing/: ActionParser.cpp  DataModelParser.cpp  DoneDataParser.cpp  GuardParser.cpp  InvokeParser.cpp  LibXMLParser.cpp  ParsingCommon.cpp  PugiXMLParser.cpp  SCXMLParser.cpp  StateNodeParser.cpp  TransitionParser.cpp  XIncludeProcessor.cpp  XMLParserFactory.cpp
rsm/src/runtime/: ActionExecutorImpl.cpp  EventRaiserImpl.cpp  ExecutionContextImpl.cpp  HistoryManager.cpp  HistoryStateAutoRegistrar.cpp  HistoryValidator.cpp  InvokeExecutor.cpp  SCXMLEngineImpl.cpp  SCXMLEngineImpl.h  StateHierarchyManager.cpp  StateMachine.cpp  StateMachineContext.cpp  StateMachineEventRaiser.cpp  StateMachineFactory.cpp
rsm/src/scripting/: DOMBinding.cpp  JSEngine.cpp  JSEngineImpl.cpp  XMLDOMWrapper.cpp
rsm/src/states/: ConcurrentEventBroadcaster.cpp  ConcurrentRegion.cpp  ConcurrentStateNode.cpp  ExternalTransitionHandler.cpp  ParallelRegionOrchestrator.cpp  StateExitExecutor.cpp
sce/: CMakeLists.txt
sce/include/actions/: AssignAction.h  BaseAction.h  ForeachAction.h  IfAction.h  LogAction.h  SendAction.h
sce/include/backends/: DefaultBackend.h  SpdlogBackend.h
sce/include/common/: AssignHelper.h  AssignmentExecutionHelper.h  ClassBinding.h  Constants.h  DatamodelValidationHelper.h  DisableStdOut.h  EventDataHelper.h  EventMetadataHelper.h  EventTypeHelper.h  FileLoadingHelper.h  FinalizeHelper.h  ForeachHelper.h  HierarchicalStateHelper.h  ILoggerBackend.h  InvokeHelper.h  JsonUtils.h  LogUtils.h  Logger.h  NamelistHelper.h  ParallelCompletionHelper.h  ParallelConfigurationHelper.h  SendHelper.h  StringUtils.h  SystemVariableHelper.h  TestSummaryHelper.h  UniqueIdGenerator.h  UrlEncodingHelper.h  XmlSerializationHelper.h
sce/include/core/: EventMetadata.h  EventProcessingAlgorithms.h  EventQueueAdapters.h  EventQueueManager.h  InvokeManagerAdapters.h  ParallelProcessingAlgorithms.h
tests/benchmarks/: CMakeLists.txt  EventSchedulerBenchmark.cpp  JSEngineBenchmark.cpp  StateMachineBenchmark.cpp
tests/codegen/: CMakeLists.txt
tools/txml_converter/: CMakeLists.txt  main.cpp
(+1197 files in other folders)
